# OpenCvforfun

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
include/: CV.hpp
src/: CV.cpp
